# ai-hub

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.vibecore/backups/: README.20260419T060342.md
.vibecore/snapshots/: 2026-04-19T12-16-41.md  2026-04-19T12-35-09.md
docs/: PRD.md
scripts/: README.md  update-benchmarks.py
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: advisor.rs  benchmarks.rs  conversations.rs  db.rs  detect.rs  engine.rs  health.rs  keystore.rs  lib.rs  main.rs  news.rs  notify.rs  presets.rs  pricing.rs  proxy.rs  rankings.rs  router.rs  scanner.rs  switcher.rs  traffic.rs
src/components/: CommandPalette.tsx  Layout.tsx  Onboarding.tsx
src/lib/: theme.test.ts  theme.ts  utils.test.ts  utils.ts
src/pages/: Advisor.tsx  Billing.test.tsx  Billing.tsx  Conversations.tsx  Dashboard.test.tsx  Dashboard.tsx  News.tsx  Providers.tsx  Rankings.tsx  Settings.test.tsx  SettingsPage.tsx  Tasks.test.tsx  Tasks.tsx  Usage.tsx
src/test/: setup.ts
src/types/: provider.ts
