[package]
name = "ai-hub"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.35", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
anyhow = "1"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

